--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,25 @@
 body{
     text-align: center;
     font-family: "Arial";
-    color: deeppink;
+    color: #333;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
+}
+
+
+.container{
+    width: 70%;
+    border: 1px solid red;
+    margin: 0 auto;
+    text-align: left;
+    padding: 1em;
+
+
+}
+
+.container h1{
+  
+    font-size: 20px;
+ 
 }
