--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,7 +10,8 @@ body{
 .cabecera{
     background-color:#33A;
     color: white;
-    padding: 0.4em;
+    padding: 1em;
+    margin: 0;
     font-weight: bold;
 }
 
@@ -19,7 +20,7 @@ body{
     border: 1px dotted #333;
     margin: 0 auto;
     text-align: left;
-    padding: 1em;
+    padding:0;
 
 
 }
@@ -28,4 +29,8 @@ body{
   
     font-size: 20px;
  
+}
+
+.post{
+    padding: 1em;
 }
