aplique color de fondo, agregue logo

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,5 @@
 body{
+    background-color: #1e1f24;
     text-align: center;
     font-family: "Arial";
     color: #333;
@@ -13,6 +14,11 @@ body{
     padding: 1em;
     margin: 0;
     font-weight: bold;
+}
+
+.cabecera .logo {
+    width: 40PX;
+    vertical-align: middle;
 }
 
 .container{
@@ -32,5 +38,6 @@ body{
 }
 
 .post{
+    background-color: white;
     padding: 1em;
 }
